--- a/tailwindcss/mac/index.html
+++ b/tailwindcss/mac/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mac 窗口效果</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        html, body {
-            height: 100%;
-        }
-    </style>
 </head>
 <body>
-    <div class="h-full flex items-center">
+    <div class="min-h-screen flex items-center">
         <div class="container mx-auto w-1/2">
             <div class="flex bg-[#E3E3E3] p-2">
                 <div class="rounded-full bg-red-500 w-4 h-4 mr-2"></div>
